Cache Page Requests
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Busybee/SecurityBundle/Resources/config/doctrine/Page.orm.yml
+++ b/src/Busybee/SecurityBundle/Resources/config/doctrine/Page.orm.yml
@@ -23,6 +23,9 @@ Busybee\SecurityBundle\Entity\Page:
             length: '200'
         roles:
             type: array
+        cacheTime:
+            type: datetime
+            nullable: true
         lastModified:
             type: datetime
         createdOn:
