Page Cache Update
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Busybee/SecurityBundle/Resources/config/services.yml
+++ b/src/Busybee/SecurityBundle/Resources/config/services.yml
@@ -262,4 +262,4 @@ services:
         arguments:
             - '@session'
             - '@doctrine.orm.entity_manager'
-            - '@request_stack'
+            - '@router.default'
