TimeTable Work in Progress
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Busybee/SecurityBundle/Resources/config/services.yml
+++ b/src/Busybee/SecurityBundle/Resources/config/services.yml
@@ -63,6 +63,7 @@ parameters:
             - ROLE_ADMIN
         ROLE_SYSTEM_ADMIN:
             - ROLE_REGISTRAR
+            - ROLE_PARENT
 
 
 services:
