--- a/app/config/doctrine.yml
+++ b/app/config/doctrine.yml
@@ -16,6 +16,8 @@ doctrine:
                     collate: utf8mb4_unicode_ci 
                 mapping_types:
                     enum: string
+        #       wrapper_class:        Busybee\HomeBundle\Doctrine\BusyBeeConnection
+                server_version: 5.6
         # if using pdo_sqlite as your database driver:
         #   1. add the path in parameters.yml
         #     e.g. database_path: "%kernel.root_dir%/data/data.db3"
