--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -67,6 +67,7 @@ security:
             switch_user:  true
 
     access_control: 
+        - { path: ^/, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: busybee_security_login, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/system/install/, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/(_(profiler|wdt)|css|images|js)/, role: IS_AUTHENTICATED_ANONYMOUSLY }
