--- a/src/Busybee/SystemBundle/Resources/config/services.yml
+++ b/src/Busybee/SystemBundle/Resources/config/services.yml
@@ -73,7 +73,12 @@ services:
     setting.manager:
         class: Busybee\SystemBundle\Setting\SettingManager
         arguments: 
-            - "@my_service_container"
+            - "@setting.repository"
+            - '@session'
+            - '@doctrine.orm.entity_manager'
+            - '%kernel.project_dir%'
+            - '@busybee_security.authorisation.checker'
+            - '@my_service_container'
     plugin.manager:
         class: Busybee\SystemBundle\Plugin\PluginManager
         arguments: 
@@ -124,3 +129,4 @@ services:
         arguments:
             - '%kernel.project_dir%'
             - '@doctrine.dbal.connection_factory'
+            - '@system.password.manager'
