--- a/composer.json
+++ b/composer.json
@@ -17,25 +17,26 @@
     },
     "require": {
       "php": ">=7.0.0",
-        "symfony/symfony": "3.*",
+      "symfony/symfony": "3.*",
       "doctrine/orm": "^2.5@DEV",
       "doctrine/doctrine-bundle": "^1.6@DEV",
       "doctrine/doctrine-cache-bundle": "^1.2@DEV",
-        "symfony/swiftmailer-bundle": "^2.3",
+      "symfony/swiftmailer-bundle": "^2.3",
       "symfony/monolog-bundle": "^3.1",
-        "sensio/distribution-bundle": "^5.0",
-        "sensio/framework-extra-bundle": "^3.0.2",
-        "incenteev/composer-parameter-handler": "^2.0",
-        "symfony/assetic-bundle": "^2.7",
+      "sensio/distribution-bundle": "^5.0",
+      "sensio/framework-extra-bundle": "^3.0.2",
+      "incenteev/composer-parameter-handler": "^2.0",
+      "symfony/assetic-bundle": "^2.7",
       "doctrine/dbal": "^2.5@DEV",
       "doctrine/doctrine-fixtures-bundle": "^2.3@DEV",
-        "symfony/intl": "^3.0",
-        "symfony/console": "^3.0",
-        "imsky/holder": "2.9.*",
-        "vsn4ik/bootstrap-submenu": "2.0.*",
-        "twig/extensions": "^1.4",
-        "core23/dompdf-bundle": "^1.0",
-        "league/oauth2-google": "^1.0"
+      "symfony/intl": "^3.0",
+      "symfony/console": "^3.0",
+      "imsky/holder": "2.9.*",
+      "vsn4ik/bootstrap-submenu": "2.0.*",
+      "twig/extensions": "^1.4",
+      "core23/dompdf-bundle": "^1.0",
+      "league/oauth2-google": "^1.0",
+      "egulias/email-validator": "^2.1"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
