--- a/src/Busybee/SystemBundle/Resources/config/updates/Setting_0_0_00.yml
+++ b/src/Busybee/SystemBundle/Resources/config/updates/Setting_0_0_00.yml
@@ -1,3 +1,9 @@
+Installed:
+    type: boolean
+    value: 1
+    displayName: System Installed
+    description: A flag showing the system has finished installing.
+    role: ROLE_SYSTEM_ADMIN
 Version.System:
     type: 'string'
     value: '0.0.00'
