--- a/composer.json
+++ b/composer.json
@@ -18,17 +18,17 @@
     "require": {
       "php": ">=7.0.0",
       "symfony/symfony": "3.*",
-      "doctrine/orm": "^2.5@DEV",
-      "doctrine/doctrine-bundle": "^1.6@DEV",
-      "doctrine/doctrine-cache-bundle": "^1.2@DEV",
+      "doctrine/orm": "^2.5",
+      "doctrine/doctrine-bundle": "^1.6",
+      "doctrine/doctrine-cache-bundle": "^1.2",
       "symfony/swiftmailer-bundle": "^2.3",
       "symfony/monolog-bundle": "^3.1",
       "sensio/distribution-bundle": "^5.0",
       "sensio/framework-extra-bundle": "^3.0.2",
       "incenteev/composer-parameter-handler": "^2.0",
       "symfony/assetic-bundle": "^2.7",
-      "doctrine/dbal": "^2.5@DEV",
-      "doctrine/doctrine-fixtures-bundle": "^2.3@DEV",
+      "doctrine/dbal": "^2.5",
+      "doctrine/doctrine-fixtures-bundle": "^2.3",
       "symfony/intl": "^3.0",
       "symfony/console": "^3.0",
       "imsky/holder": "2.9.*",
