System Acknowledgement (Version Check)
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,9 @@
     },
     "require": {
       "php": ">=7.0.0",
-      "symfony/symfony": "3.*",
-      "doctrine/orm": "^2.5",
+      "symfony/symfony": "^3.0",
+      "doctrine/orm": "v2.5.4",
+      "doctrine/common": "~2.5.3",
       "doctrine/doctrine-bundle": "^1.6",
       "doctrine/doctrine-cache-bundle": "^1.2",
       "symfony/swiftmailer-bundle": "^2.3",
@@ -27,12 +28,12 @@
       "sensio/framework-extra-bundle": "^3.0.2",
       "incenteev/composer-parameter-handler": "^2.0",
       "symfony/assetic-bundle": "^2.7",
-      "doctrine/dbal": "^2.5",
+      "doctrine/dbal": "~2.5.12",
       "doctrine/doctrine-fixtures-bundle": "^2.3",
       "symfony/intl": "^3.0",
       "symfony/console": "^3.0",
-      "imsky/holder": "2.9.*",
-      "vsn4ik/bootstrap-submenu": "2.0.*",
+      "imsky/holder": "^2.9.0",
+      "vsn4ik/bootstrap-submenu": "^2.0.0",
       "twig/extensions": "^1.4",
       "core23/dompdf-bundle": "^1.0",
       "league/oauth2-google": "^1.0",
