Timetable Builder Debug Process.
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/composer.json
+++ b/composer.json
@@ -18,8 +18,8 @@
     "require": {
       "php": ">=7.0.0",
       "symfony/symfony": "^3.0",
-      "doctrine/orm": "v2.5.4",
-      "doctrine/common": "~2.5.3",
+      "doctrine/orm": "~2.5",
+      "doctrine/common": "~2.5",
       "doctrine/doctrine-bundle": "^1.6",
       "doctrine/doctrine-cache-bundle": "^1.2",
       "symfony/swiftmailer-bundle": "^2.3",
@@ -28,7 +28,7 @@
       "sensio/framework-extra-bundle": "^3.0.2",
       "incenteev/composer-parameter-handler": "^2.0",
       "symfony/assetic-bundle": "^2.7",
-      "doctrine/dbal": "~2.5.12",
+      "doctrine/dbal": "~2.5",
       "doctrine/doctrine-fixtures-bundle": "^2.3",
       "symfony/intl": "^3.0",
       "symfony/console": "^3.0",
