Flash Message Filter for duplicates
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Busybee/HomeBundle/Resources/config/services.yml
+++ b/src/Busybee/HomeBundle/Resources/config/services.yml
@@ -125,3 +125,7 @@ services:
             - '@setting.manager'
             - '%version%'
             - '@translator'
+    flash.extension:
+        class: Busybee\HomeBundle\Model\FlashExtension
+        tags:
+            - { name: twig.extension }
