Generate TimeTable Display ONLY as AJAX Prep work for Period Search
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Busybee/TimeTableBundle/Resources/config/routing.yml
+++ b/src/Busybee/TimeTableBundle/Resources/config/routing.yml
@@ -82,3 +82,6 @@ timetable_space_set:
 timetable_staff_set:
     path:     /staff/{staff}/set/
     defaults: { _controller: BusybeeTimeTableBundle:TimeTable:setTimeTableStaff }
+line_periods_search:
+    path:     /line/{tt}/periods/{id}/search/
+    defaults: { _controller: BusybeeTimeTableBundle:Line:searchPeriods }
