--- a/src/Busybee/StudentBundle/Resources/config/services.yml
+++ b/src/Busybee/StudentBundle/Resources/config/services.yml
@@ -52,6 +52,12 @@ parameters:
             i.grade:
                 alias: g
                 type: leftJoin
+            p.user:
+                alias: u
+                type: leftJoin
+            p.staff:
+                alias: sta
+                type: leftJoin
         searchList:
             - p.surname
             - p.firstName
@@ -63,6 +69,9 @@ parameters:
             - p.firstName
             - g.name as details
             - p.id
+            - s.id as stu_id
+            - sta.id as staff_id
+            - u.id as user_id
         choices:
             all:
                 route: person_manage
