--- a/composer.json
+++ b/composer.json
@@ -16,32 +16,32 @@
         }
     },
     "require": {
-      "php": ">=7.0.0",
-      "symfony/symfony": "^3.0",
+      "php": ">=7.1.0",
+      "symfony/symfony": "~3.0",
       "doctrine/orm": "~2.5",
-      "doctrine/common": "~2.5",
-      "doctrine/doctrine-bundle": "^1.6",
-      "doctrine/doctrine-cache-bundle": "^1.2",
-      "symfony/swiftmailer-bundle": "^2.3",
-      "symfony/monolog-bundle": "^3.1",
-      "sensio/distribution-bundle": "^5.0",
-      "sensio/framework-extra-bundle": "^3.0.2",
-      "incenteev/composer-parameter-handler": "^2.0",
-      "symfony/assetic-bundle": "^2.7",
+      "doctrine/common": "~2.7",
+      "doctrine/doctrine-bundle": "~1.0",
+      "doctrine/doctrine-cache-bundle": "~1.0",
+      "symfony/swiftmailer-bundle": "~2.3",
+      "symfony/monolog-bundle": "~3.1",
+      "sensio/distribution-bundle": "~5.0",
+      "sensio/framework-extra-bundle": "~3.0",
+      "incenteev/composer-parameter-handler": "~2.0",
+      "symfony/assetic-bundle": "~2.7",
       "doctrine/dbal": "~2.5",
-      "doctrine/doctrine-fixtures-bundle": "^2.3",
-      "symfony/intl": "^3.0",
-      "symfony/console": "^3.0",
-      "imsky/holder": "^2.9.0",
-      "vsn4ik/bootstrap-submenu": "^2.0.0",
-      "twig/extensions": "^1.4",
-      "core23/dompdf-bundle": "^1.0",
-      "league/oauth2-google": "^1.0",
-      "egulias/email-validator": "^2.1"
+      "doctrine/doctrine-fixtures-bundle": "~2.3",
+      "symfony/intl": "~3.0",
+      "symfony/console": "~3.0",
+      "imsky/holder": "~2.9",
+      "vsn4ik/bootstrap-submenu": "~2.0",
+      "twig/extensions": "~1.4",
+      "core23/dompdf-bundle": "~1.0",
+      "league/oauth2-google": "~1.0",
+      "egulias/email-validator": "~2.1"
     },
     "require-dev": {
-        "sensio/generator-bundle": "^3.0",
-        "symfony/phpunit-bridge": "^2.7"
+      "sensio/generator-bundle": "~3.0",
+      "symfony/phpunit-bridge": "~2.7"
     },
     "scripts": {
         "post-install-cmd": [
