Timetable Activity Call
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -38,6 +38,10 @@ busybee_time_table:
     resource: "@BusybeeTimeTableBundle/Resources/config/routing.yml"
     prefix:   /timetable/
 
+busybee_activity:
+    resource: "@BusybeeActivityBundle/Resources/config/routing.yml"
+    prefix:   /activity/
+
 busybee_plugin:
     resource: .
     type: advanced_extra
