--- a/src/Busybee/TimeTableBundle/Resources/config/doctrine/Line.orm.yml
+++ b/src/Busybee/TimeTableBundle/Resources/config/doctrine/Line.orm.yml
@@ -34,7 +34,7 @@ Busybee\TimeTableBundle\Entity\Line:
             type: datetime
     manyToMany:
         activities:
-            targetEntity: Busybee\StudentBundle\Entity\Activity
+            targetEntity: Busybee\ActivityBundle\Entity\Activity
             joinTable:
                 name: line_activity
                 joinColumns:
