--- a/src/Busybee/TimeTableBundle/Resources/config/doctrine/PeriodActivity.orm.yml
+++ b/src/Busybee/TimeTableBundle/Resources/config/doctrine/PeriodActivity.orm.yml
@@ -40,7 +40,7 @@ Busybee\TimeTableBundle\Entity\PeriodActivity:
                 tutor_3:
                     referencedColumnName: id
         activity:
-            targetEntity: Busybee\StudentBundle\Entity\Activity
+            targetEntity: Busybee\ActivityBundle\Entity\Activity
             inversedBy: periods
             joinColumns:
                 activity_id:
