--- a/src/Busybee/InstituteBundle/Resources/config/doctrine/Grade.orm.yml
+++ b/src/Busybee/InstituteBundle/Resources/config/doctrine/Grade.orm.yml
@@ -25,7 +25,7 @@ Busybee\InstituteBundle\Entity\Grade:
             cascade: [ 'persist' ]
     manyToMany:
         activities:
-            targetEntity: Busybee\StudentBundle\Entity\Activity
+            targetEntity: Busybee\ActivityBundle\Entity\Activity
             mappedBy: grades
     manyToOne:
         year:
