Timetable Locked added
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -42,6 +42,10 @@ busybee_activity:
     resource: "@BusybeeActivityBundle/Resources/config/routing.yml"
     prefix:   /activity/
 
+busybee_attendance:
+    resource: "@BusybeeAttendanceBundle/Resources/config/routing.yml"
+    prefix:   /attendance/
+
 busybee_plugin:
     resource: .
     type: advanced_extra
