--- a/src/Busybee/TimeTableBundle/Resources/config/doctrine/TimeTable.orm.yml
+++ b/src/Busybee/TimeTableBundle/Resources/config/doctrine/TimeTable.orm.yml
@@ -25,6 +25,8 @@ Busybee\TimeTableBundle\Entity\TimeTable:
             length: '16'
         locked:
             type: boolean
+        generated:
+            type: boolean
         lastModified:
             type: datetime
         createdOn:
