--- a/src/Busybee/TimeTableBundle/Resources/config/services.yml
+++ b/src/Busybee/TimeTableBundle/Resources/config/services.yml
@@ -25,6 +25,7 @@ parameters:
             - t.nameShort
             - t.id
             - y.name as year
+            - t.locked
     LinePagination:
         alias: l
         sortBy:
