Begin adding Calendar to Core
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,7 @@
+busybee_calendar:
+    resource: "@BusybeeCalendarBundle/Resources/config/routing.yml"
+    prefix:   /
+
 busybee_home:
     resource: "@BusybeeHomeBundle/Resources/config/routing.yml"
     prefix:   /
